--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@picocss/pico": "^1.5.7",
+    "axios": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.9.0",
+    "react-router-dom": "^6.10.0",
     "react-slick": "^0.29.0"
   },
   "devDependencies": {
