--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@picocss/pico": "^1.5.7",
     "axios": "^1.3.5",
+    "openai": "^3.3.0",
     "react": "^18.2.0",
     "react-card-flip": "^1.2.0",
     "react-dom": "^18.2.0",
